Fix footer on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1647,8 +1647,8 @@ margin on the iframe, cause it breaks stuff. */
     }
 
     .post-footer {
-        padding: 5rem 0 3rem 0;
-        text-align: center;
+        display: flex;
+        flex-direction: column;
     }
 
     .post-footer .author {
@@ -1656,6 +1656,10 @@ margin on the iframe, cause it breaks stuff. */
         margin: 0 0 2rem 0;
         padding: 0 0 1.6rem 0;
         border-bottom: #EBF2F6 1px dashed;
+    }
+
+    .post-footer .author-details {
+        text-align: center;
     }
 
     .post-footer .share {
